--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
 [submodule "themes/hello-friend-ng"]
 	path = themes/hello-friend-ng
-	url = https://github.com/sheeepdev/hello-friend-ng
+	url = https://github.com/sheeepdev/hello-friend-ng.git
