--- a/config.toml
+++ b/config.toml
@@ -1,4 +1,4 @@
-baseurl      = "https://sheeepdev.github.io/website"
+baseurl      = "/"
 title        = "sheep's website"
 languageCode = "en-us"
 theme        = "hello-friend-ng"
