--- a/config.toml
+++ b/config.toml
@@ -26,7 +26,7 @@ enableEmoji     = true
   enableSharingButtons = false
 
   # Metadata mostly used in document's head
-  description = "My new homepage or blog"
+  description = "sheep's personal website"
   keywords = "homepage, blog"
   images = [""]
   
@@ -60,7 +60,7 @@ enableEmoji     = true
     [languages.en.params.logo]
       logoText = "sheep's website"
       logoHomeLink = "/"
-      path = "img/pfp.png"
+      path = "https://raw.githubusercontent.com/sheeepdev/website/main/img/pfp.png"
     # alt = "Your example logo alt text"
 
   # And you can even create generic menu
