--- a/config.toml
+++ b/config.toml
@@ -70,7 +70,7 @@ enableEmoji     = true
 
 [languages]
   [languages.en]
-    title = "sheep's website"
+    title = "sheep"
     subtitle = ""
     keywords = ""
     readOtherPosts = "Read other posts"
