--- a/config.toml
+++ b/config.toml
@@ -38,9 +38,10 @@ enableEmoji     = true
     author = true
 
     bottomText = [
-      "Powered by <a href=\"http://gohugo.io\">Hugo</a> and <a href=\"https://github.com/pages\">GitHub Pages</a>",
-      "Theme by <a href=\"https://github.com/rhazdon\">Djordje Atlialp</a>"
+      "Powered by <a href=\"http://gohugo.io\">Hugo</a>",
+      "Made with &#10084; by <a href=\"https://github.com/sheeepdev\">sheep</a>"
     ]
+    
    [params.portrait]  
      path     = "https://raw.githubusercontent.com/sheeepdev/website/main/img/pfp.png"
      alt      = "Logo"
@@ -61,7 +62,7 @@ enableEmoji     = true
 
   [[params.social]]
     name = "github"
-    url  = "https://github.com/sheepdev"
+    url  = "https://github.com/sheeepdev"
 
   [[params.social]]
     name= "discord"
@@ -70,11 +71,10 @@ enableEmoji     = true
 
 [languages]
   [languages.en]
-    title = "sheep"
+    title = "sheep's website"
     subtitle = ""
     keywords = ""
     readOtherPosts = "Read other posts"
-    homeTitle = "sheep"
 
     [languages.en.params.logo]
       logoText = "sheep"
