Add contact to the menu!

--- a/config.toml
+++ b/config.toml
@@ -96,3 +96,7 @@ enableEmoji     = true
     identifier = "uses"
     name = "Uses"
     url = "uses"
+   [[menu.main]]
+    identifier = "contact"
+    name = "Contact"
+    url = "contact"
