🤖 more robots.txt

--- a/config.toml
+++ b/config.toml
@@ -6,7 +6,7 @@ paginate     = 10
 copyright = "<a href=\"/license\">License</a>"
 
 enableEmoji     = true
-enableRobotsTXT = false
+enableRobotsTXT = true
 
 [params]
   dateform        = "Jan 2, 2006"
