--- a/config.toml
+++ b/config.toml
@@ -1,4 +1,4 @@
-baseurl      = "/"
+baseurl      = "https://sheepdev.xyz/"
 title        = "sheep's website"
 languageCode = "en-us"
 theme        = "hello-friend-ng"
