--- a/config.toml
+++ b/config.toml
@@ -21,7 +21,7 @@ enableRobotsTXT = true
   
   # Home stuff
   homeTitle = "sheep"
-  homeSubtitle = "A developer from Zagreb, Croatia"
+  homeSubtitle = "A software developer from Zagreb, Croatia"
   
   # Theme toggle
   enableThemeToggle = true
