--- a/config.toml
+++ b/config.toml
@@ -93,15 +93,19 @@ enableRobotsTXT = true
     identifier = "blog"
     name       = "Blog"
     url        = "posts"
+    weight     = "2" 
    [[menu.main]]
     identifier = "about"
     name       = "About"
-    url        = "about"  
+    url        = "about" 
+    weight     = "1" 
    [[menu.main]]
     identifier = "uses"
     name       = "Uses"
     url        = "uses"
+    weight     = "3" 
    [[menu.main]]
    	identifier = "contact"
    	name 	   = "Contact"
    	url        = "contact" 
+   	weight     = "4" 
