--- a/config.toml
+++ b/config.toml
@@ -107,9 +107,14 @@ enableRobotsTXT = true
     identifier = "uses"
     name       = "Uses"
     url        = "uses"
-    weight     = "3" 
+    weight     = "3"
+   [[menu.main]]
+    identifier = "projects"
+    name       = "Projects"
+    url		   = "projects"
+    weight     = "4" 
    [[menu.main]]
    	identifier = "contact"
    	name 	   = "Contact"
    	url        = "contact" 
-   	weight     = "4" 
+   	weight     = "5" 
