--- a/config.toml
+++ b/config.toml
@@ -16,7 +16,7 @@ enableRobotsTXT = true
   dateform        = "Jan 2, 2006"
   dateformShort   = "Jan 2"
   dateformNum     = "2006-01-02"
-  dateformNumTime = "2006-01-02 15:04"
+  dateformNumTime = "Jan 2, 2006 15:04"
 
   # Metadata mostly used in document's head
   description = "sheep's personal website"
