--- a/config.toml
+++ b/config.toml
@@ -8,6 +8,11 @@ copyright    = "© 2022"
 enableEmoji     = true
 enableRobotsTXT = true
 
+[markup]
+  [markup.goldmark]
+    [markup.goldmark.renderer]
+      unsafe = true
+
 [params.utterances]
 	owner = "sheeepdev"
 	repo = "website"
