--- a/config.toml
+++ b/config.toml
@@ -44,7 +44,7 @@ enableRobotsTXT = true
 
     bottomText = [
       "Powered by <a href=\"http://gohugo.io\">Hugo</a>",
-      "<a href=\"https://sheepdev.xyz/privacy>Privacy Policy</a>"
+      "<a href=\"https://sheepdev.xyz/privacy>Privacy Policy</a>",
       "Made with &#10084; by <a href=\"https://github.com/sheeepdev\">sheep</a>"
     ]
     
