--- a/config.toml
+++ b/config.toml
@@ -43,7 +43,7 @@ enableRobotsTXT = true
     author = true
 
     bottomText = [
-      "<a href=\"https://sheepdev.xyz/privacy>Privacy Policy</a>",
+      "Powered by <a href=\"http://gohugo.io\">Hugo</a>",
       "Made with &#10084; by <a href=\"https://github.com/sheeepdev\">sheep</a>"
     ]
     
